@@ -32,6 +32,9 @@ public final class Issue216Test {
   }
 
   @Test public void issue216_06() {
-    trimming("(long)new Integer(5)").to("1L*new Integer(5)").stays();
+    trimming("(long)new Integer(5)")//
+    .to("1L*new Integer(5)")//
+    .to("1L*Integer.valueOf(5)")//
+    .stays();
   }
 }
